* 2007-11-29 - thorben.betten@open-xchange.com

 - Bugfix #10460: AJP exception enhanced by a keep alive flag to indicate
   whether to close or keep established AJP connection. Thus any exception
   related to a broken socket has its flag set to false -> close connection.

* 2007-11-27 - thorben.betten@open-xchange.com

 - Bugfix #9963: Avoiding infinite loops of broken pipe errors on a lost
   socket connection

* 2007-11-27 - marcus.klein@open-xchange.com

 - Bugfix #10276: Excluded in the end date range query the end date.

* 2007-11-21 - thorben.betten@open-xchange.com

 - Bugfix #10033: Fixed 'edit-draft'
 - Bugfix #10100: Fixed path request on virtual shared folders

* 2007-11-20 - thorben.betten@open-xchange.com

 - Bugfix #10201: No second duplicate of a sent mail is copied to default
   sent folder

* 2007-11-16 - thorben.betten@open-xchange.com

 - Bugfix #10234: Using proper SQL to locate duplicate folders on update

* 2007-11-14 - thorben.betten@open-xchange.com

 - Bugfix #10167: Fixed imap-based sort

* 2007-11-13 - marcus.klein@open-xchange.com

 - Bugfix #10117: Fixed moving problems.

* 2007-11-09 - thorben.betten@open-xchange.com

 - Bugfix #10117: Checking for duplicates on folder creation/update/rename
 - Bugfix #10010: Decoding file attachment's file name when saving to
   infostore

* 2007-11-08 - thorben.betten@open-xchange.com

 - Bugfix #10053: Keeping original file data when attaching to mail
 - Bugfix #10121: Removed vulnerability for DOS attacks in AJP through
   keeping AJP connection alive on every exception

* 2007-11-07 - manuel.kraft@open-xchange.com

  - Bugfix ID#10050 Database leftovers of deleted contexts

* 2007-11-07 - thorben.betten@open-xchange.com

 - Bugfix #9966: Proper error message on exceeded quota on mail server

* 2007-11-06 - dennis.sieben@open-xchange.com

 - Bugfix #8919: [L3] 'checkconsistency' does not provide any usage information and
   does not work as well

* 2007-10-31 - ben.pahne@open-xchange.com
